# sage-forge-professional

./: .gitignore  .gitignore-submodules  .gitmodules  CLAUDE.md  ENHANCED_STRATEGY_COMPLETE.md  ENHANCED_STRATEGY_RESULTS.md  GIT_UV_STATUS.md  INVESTIGATION_SUMMARY.md  LINTING_SOLUTION.md  NautilusTrader_FINPLOT_INTEGRATION.md  NautilusTrader_NATIVE_COMPREHENSIVE.md  PROJECT_STATUS_SUMMARY.md  README.md  REORGANIZATION_SUCCESS_REPORT.md  SAGE_FORGE_REORGANIZATION_PLAN.md  SETUP.md  SOTA_2025_IMPROVEMENTS.md  SRC_CLEANUP_SUMMARY.md  TIREX_INTEGRATION_SUMMARY.md  WORKSPACE_OVERVIEW.md  WORKSPACE_REFERENCE_CHECKPOINT.md  gpu-ws-context-aware.sh  gpu-ws-test-results.md  gpu_test_file.txt  install_2025_sota_deps.py  nt.code-workspace  pyproject.toml  pyrightconfig.json  run.sh  sync_validation_test.txt  test_enhanced_guardian_system.py  test_finplot.py  test_guardian_effectiveness.py  test_tirex_data_pipeline_vulnerabilities.py  test_tirex_sage_integration.py
.claude/: README.md  (+4 more)
milestones/archives/2025-08-03-tirex-nx-ai-model-integration-complete/workspace_snapshot/sage-forge-professional/: README.md  pyproject.toml
milestones/archives/2025-08-03-tirex-nx-ai-model-integration-complete/workspace_snapshot/sage-forge-professional/cli/: sage-create
milestones/archives/2025-08-03-tirex-nx-ai-model-integration-complete/workspace_snapshot/sage-forge-professional/configs/: tirex_sage_config.yaml  tirex_strategy_config.yaml
milestones/archives/2025-08-03-tirex-nx-ai-model-integration-complete/workspace_snapshot/sage-forge-professional/documentation/: NT_PATTERNS.md
milestones/archives/2025-08-03-tirex-nx-ai-model-integration-complete/workspace_snapshot/sage-forge-professional/src/sage_forge/reporting/: performance.py
nautilus_test/: .gitignore  CANONICAL_LINTING_CONFIG.md  COMPREHENSIVE_VALIDATION_REPORT.md  LINTING_ANALYSIS.md  LINTING_STRATEGY.md  Makefile  README.md  ULTIMATE_CANONICAL_LINTING.md  enhanced_profitable_strategy_v2.py  enhanced_strategy_span_1.py  enhanced_strategy_span_2.py  enhanced_strategy_span_3.py  infrastructure_audit_report.md  multi_time_span_results.md  pyproject.toml  simple_bars_test.py  sota_performance_analysis.py  sota_strategy_span_1.py  sota_strategy_span_2.py  sota_strategy_span_3.py  test_enhanced_strategy_performance.py  test_hysteresis_result.py  test_multiple_time_spans.py  test_parameter_free_minimal.py  timestamp_fix_results.py  trade_distribution_fix_results.py  uv_python.sh  verify_timestamp_fix.py
nautilus_test/.claude/: settings.local.json
nautilus_test/docs/: README.md  README_BAR_TESTS.md  cache_management.md  funding_integration_guide.md
nautilus_test/docs/learning_notes/: 01_project_overview.md  02_testing_and_commands.md  03_strategies_and_adapters.md  04_next_steps_and_learning_path.md  05_git_workflow_and_github.md  06_critical_lessons_learned.md  07_data_source_manager_integration.md  08_backtesting_pnl_calculation_lessons.md  09_native_integration_refactoring_lessons.md  10_finplot_dual_window_resolution.md  10_funding_audit_data_verification_lessons.md  README.md
nautilus_test/examples/: README.md  funding_integration_complete.py  native_funding_complete.py
nautilus_test/examples/backtest/: backtest_sota_dec2024.py  backtest_sota_jan2025.py  backtest_sota_nov2024.py
nautilus_test/examples/sandbox/: README.md  basic_test.py  dsm_integration_demo.py  enhanced_dsm_hybrid_integration.py  enhanced_dsm_hybrid_integration_profitable.py  enhanced_simple_bars_test.py  live_plotter_decoupled.py  simple_bars_test.py  synthetic_data_example.py
nautilus_test/examples/strategies/: sota_momentum.py
nautilus_test/external_projects/: README.md
nautilus_test/integrations/: enhanced_dsm_hybrid_integration.py
nautilus_test/learning_notes/: 01_project_overview.md  03_strategies_and_adapters.md  05_git_workflow_and_github.md
nautilus_test/repos/claspy/: README.md
nautilus_test/reviews/: nt_backtesting_convention_audit.py
nautilus_test/sage/: __init__.py  hostile_sensibility_audit.py  test_alphaforge_minimal.py  test_catch22_minimal.py  test_sage_real_dsm_validation.py  test_sage_sensibility.py  test_tsfresh_minimal.py
nautilus_test/sage/models/: __init__.py  alphaforge_wrapper.py  catch22_wrapper.py  tirex_wrapper.py  tsfresh_wrapper.py
nautilus_test/scripts/: env_manager.sh  format_code.py  migrate_cache.py  setup_dev_env.sh  test_cache_config.py  verify_workspace_memory.py
nautilus_test/src/nautilus_test/: __init__.py
nautilus_test/src/nautilus_test/actors/: __init__.py  finplot_actor.py  funding_actor.py
nautilus_test/src/nautilus_test/adapters/: __init__.py
nautilus_test/src/nautilus_test/funding/: __init__.py  actor.py  backtest_integrator.py  calculator.py  data.py  manager.py  provider.py  validator.py
nautilus_test/src/nautilus_test/providers/: __init__.py  binance_specs.py  data_providers.py  position_sizing.py
nautilus_test/src/nautilus_test/strategies/: adaptive_regime_strategy.py  risk_manager.py  signal_filter.py
nautilus_test/src/nautilus_test/utils/: cache_config.py  data_manager.py
nautilus_test/src/nautilus_test/visualization/: enhanced_charts.py
nautilus_test/strategies/backtests/: enhanced_sota_strategy_2025.py  mathematically_guaranteed_bias_free_strategy_2025.py  nt_adaptive_optimization.py  nt_bias_free_config.py  nt_custom_indicators.py  nt_enhanced_sota_strategy_2025.py  nt_ensemble_learning.py  nt_microstructure_features.py  nt_native_bias_free_strategy_2025.py  nt_online_feature_selection.py  nt_sota_feature_engineering.py  parameter_free_strategy_2025.py  sota_strategy_span_1.py  sota_strategy_span_2.py  sota_strategy_span_3.py  truly_bias_free_strategy_2025.py  truly_lagged_rolling_windows.py
nautilus_test/strategies/backtests/deprecated_biased_implementations/: bias_free_rolling_windows.py  corrected_bias_free_strategy_2025.py  final_bias_free_strategy_2025.py  pure_lag1_rolling_windows.py
nautilus_test/strategies/sota/: enhanced_profitable_strategy_v2.py  sota_momentum.py
nautilus_test/tests/: test_bars_functionality.py  test_basic.py  test_dsm_integration.py
(+280 files in other folders)
