[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nt"
version = "0.1.0"
description = "NPAF/SAGE: Self-Adaptive Nonparametric Predictive Alpha Factor Framework"
readme = "docs/README.md"
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Eon Labs", email = "terry@eonlabs.com"}
]
license = {text = "Private"}
keywords = ["algorithmic-trading", "nautilus-trader", "alpha-factors", "parameter-free"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nautilus-trader>=1.219.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "attrs>=23.0.0",
    "pendulum>=3.0.0",
    "polars>=0.20.0",
    "platformdirs>=4.0.0",
    "pycatch22>=0.4.5",
    "tsfresh>=0.21.0",
    "setuptools>=80.9.0",
    "tenacity>=9.1.2",
    "finplot>=1.9.7",
    "pyqtgraph>=0.13.7",
    "python-binance>=1.0.29",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "basedpyright>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

research = [
    "pycatch22>=0.4.0",
    "stumpy>=1.12.0",  
    "tsfresh>=0.20.0",
    "optuna>=3.4.0",
    "scikit-optimize>=0.9.0",
]

visualization = [
    "finplot>=1.9.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
]

[project.urls]
Homepage = "https://github.com/Eon-Labs/nt"
Repository = "https://github.com/Eon-Labs/nt"
Documentation = "https://github.com/Eon-Labs/nt/tree/master/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "strategies*", "nautilus_test*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "strategies", "nautilus_test"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "W293", "W291", "E203", "E402"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E", "W", "B", "C4", "UP"]
"sandbox/**" = ["E", "W", "B", "C4", "UP"]

[tool.basedpyright]
include = ["src", "strategies", "nautilus_test", "examples"]
exclude = ["**/__pycache__", "**/.pytest_cache", "**/.ruff_cache", ".venv"]
typeCheckingMode = "standard"
reportAttributeAccessIssue = "error"
reportGeneralTypeIssues = "error"
reportCallIssue = "error"
reportArgumentType = "error"
reportUnboundVariable = "error"
# Relaxed for research code
reportUnusedVariable = "none"
reportUnusedImport = "none"
