[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-test"
version = "0.1.0"
description = "NautilusTrader test environment following project conventions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nautilus-trader>=1.219.0",
    "pandas>=2.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "finplot>=1.9.7",
    "polars>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
